content/blog/2025-01-01-thin_delegate_aux/tests/ui/enum_delegate_v020/fail_super_trait.stderr
error: enum_delegate does not currently support supertraits
  --> tests/ui/enum_delegate_v020/fail_super_trait.rs:4:15
   |
4  | trait ShapeI: std::fmt::Debug {
   |               ^^^
...
15 | #[enum_delegate::implement(ShapeI)]
   | ----------------------------------- in this procedural macro expansion
   |
   = note: this error originates in the macro `ShapeI` which comes from the expansion of the attribute macro `enum_delegate::implement` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `area` found for enum `Shape` in the current scope
  --> tests/ui/enum_delegate_v020/fail_super_trait.rs:30:22
   |
16 | enum Shape {
   | ---------- method `area` not found for this enum
...
30 |     assert_eq!(shape.area(), 6);
   |                      ^^^^ method not found in `Shape`
   |
note: the method `area` exists on the type `Rect`
  --> tests/ui/enum_delegate_v020/fail_super_trait.rs:5:5
   |
5  |     fn area(&self) -> usize;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   = help: items from traits can only be used if the trait is implemented and in scope
note: `ShapeI` defines an item `area`, perhaps you need to implement it
  --> tests/ui/enum_delegate_v020/fail_super_trait.rs:4:1
   |
4  | trait ShapeI: std::fmt::Debug {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
